[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lethbridge"
version = "0.1.2"
requires-python = ">=3.10"
# cf. https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database :: Front-Ends",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Utilities",
]
dependencies = [
    "alembic[tz]",
    "colorama",
    "marshmallow-sqlalchemy",
    "shellingham",
    "simplejson",
    "sqlalchemy>=2",
    "typer",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "autopep8",
    "black",
    "flake8",
    "jedi",
    "yapf",
]
psycopg2 = [
    "psycopg2",
]
psycopg2cffi = [
    "psycopg2cffi",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-order",
    "pytest-postgresql",
    "pytest-reportlog",
    "python-dateutil>=2.8.2",
]

[project.scripts]
lethbridge = "lethbridge.__main__:main"

[tool.setuptools.package-dir]
lethbridge = "src"

[tool.pytest.ini_options]
# Invoke smoke tests with `pytest -k smoke` or `pytest -m "smoke and
# not slow"`.  See also https://docs.pytest.org/en/stable/mark.html,
# https://stackoverflow.com/a/52369721.
markers = [
    "slow",
    "smoke",
]
