[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lethbridge"
description = "SQLAlchemy ORM and Marshmallow schemas for Elite: Dangerous game data"
version = "0.2.3"
requires-python = ">=3.10"
# cf. https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database :: Front-Ends",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Utilities",
]
dependencies = [
    "alembic[tz]",
    "colorama",
    "marshmallow-sqlalchemy",
    "shellingham",
    "simplejson",
    "sqlalchemy>=2",
    "typer",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "id",
    "jedi",
    "pre-commit",
    "python-semantic-release",
    "twine",
    "yapf",
]
psycopg2 = [
    "psycopg2",
]
psycopg2cffi = [
    "psycopg2cffi",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-md",
    "pytest-order",
    "pytest-postgresql",
    "pytest-reportlog",
    "python-dateutil>=2.8.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
lethbridge = "lethbridge.__main__:main"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
# Invoke smoke tests with `pytest -k smoke` or `pytest -m "smoke and
# not slow"`.  See also https://docs.pytest.org/en/stable/mark.html,
# https://stackoverflow.com/a/52369721.
markers = [
    "slow",
    "smoke",
]

[tool.semantic_release]
assets = []
commit_message = "release: cut the v{version} release\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
# Change back to true once ready for the 1.0 release.  See also
# https://python-semantic-release.readthedocs.io/en/stable/algorithm.html.
major_on_zero = false
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <releng@irtnog.org>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "ci", "docs", "feat", "fix", "perf", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.setuptools.package-dir]
lethbridge = "src"
